Fixing bug 211719. Making window.opener replaceable. r=caillon@aillon.org, sr=bzbarsky@mit.edu.